# ctsq

./: .README.md.swp  CLAUDE.md  Cargo.toml  DESIGN.md  Makefile  README.md
fixtures/: example.c  example.cpp  example.go  example.js  example.py
src/: calltree.rs  files.rs  main.rs  runner.rs  tree.rs
src/compiler/: mod.rs
src/compiler/lang/: c.rs  cpp.rs  go.rs  javascript.rs  mod.rs  python.rs  rust.rs
src/query/: ast.rs  mod.rs  parser.rs
src/resolve/: fallback.rs  go.rs  graph.rs  mod.rs  rust.rs
